adding outbound link click tracking to trainer page and footer

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -213,11 +213,13 @@
                             <li class="collection-item">
                                 <div class="left-align">
                                     <a href="https://docs.google.com/document/d/1G2ErNUcRkyHsFP6srtEqlT6q9CnyMNegDOR2OKa3chI/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/document/d/1G2ErNUcRkyHsFP6srtEqlT6q9CnyMNegDOR2OKa3chI/edit?usp=sharing'); return false;"
                                        target="_blank"
                                        >
                                         SOLE 101 Training Manual
                                     </a>
                                     <a href="https://docs.google.com/document/d/1G2ErNUcRkyHsFP6srtEqlT6q9CnyMNegDOR2OKa3chI/export?format=doc"
+                                       onclick="trackOutboundLink('https://docs.google.com/document/d/1G2ErNUcRkyHsFP6srtEqlT6q9CnyMNegDOR2OKa3chI/export?format=doc'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
@@ -225,6 +227,7 @@
                                         <img src="/images/profile/doc.svg" alt="">
                                     </a>
                                     <a href="https://docs.google.com/document/d/1G2ErNUcRkyHsFP6srtEqlT6q9CnyMNegDOR2OKa3chI/export?format=pdf"
+                                       onclick="trackOutboundLink('https://docs.google.com/document/d/1G2ErNUcRkyHsFP6srtEqlT6q9CnyMNegDOR2OKa3chI/export?format=pdf'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
@@ -232,6 +235,7 @@
                                         <img src="/images/profile/pdf.svg" alt="">
                                     </a>
                                     <a href="https://docs.google.com/document/d/1G2ErNUcRkyHsFP6srtEqlT6q9CnyMNegDOR2OKa3chI/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/document/d/1G2ErNUcRkyHsFP6srtEqlT6q9CnyMNegDOR2OKa3chI/edit?usp=sharing'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
@@ -244,11 +248,13 @@
                             <li class="collection-item">
                                 <div class="left-align">
                                     <a href="https://docs.google.com/presentation/d/1ou5fV2BjTT69-H_rQPimMWGcZS1ucZOvh1drzjGqNP4/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1ou5fV2BjTT69-H_rQPimMWGcZS1ucZOvh1drzjGqNP4/edit?usp=sharing'); return false;"
                                        target="_blank"
                                        >
                                         StartSOLE 101 Presentation
                                     </a>
                                     <a href="https://docs.google.com/presentation/d/1ou5fV2BjTT69-H_rQPimMWGcZS1ucZOvh1drzjGqNP4/export/ppt"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1ou5fV2BjTT69-H_rQPimMWGcZS1ucZOvh1drzjGqNP4/export/ppt'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
@@ -256,6 +262,7 @@
                                         <img src="/images/profile/ppt.svg" alt="">
                                     </a>
                                     <a href="https://docs.google.com/presentation/d/1ou5fV2BjTT69-H_rQPimMWGcZS1ucZOvh1drzjGqNP4/export/pdf"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1ou5fV2BjTT69-H_rQPimMWGcZS1ucZOvh1drzjGqNP4/export/pdf'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
@@ -263,6 +270,7 @@
                                         <img src="/images/profile/pdf.svg" alt="">
                                     </a>
                                     <a href="https://docs.google.com/presentation/d/1ou5fV2BjTT69-H_rQPimMWGcZS1ucZOvh1drzjGqNP4/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1ou5fV2BjTT69-H_rQPimMWGcZS1ucZOvh1drzjGqNP4/edit?usp=sharing'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
@@ -274,11 +282,13 @@
                             <li class="collection-item">
                                 <div class="left-align">
                                     <a href="https://docs.google.com/presentation/d/1nby61PWTdZjsP9caLB5M8rLyT5NMTYzoI5V0fJHth3w/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1nby61PWTdZjsP9caLB5M8rLyT5NMTYzoI5V0fJHth3w/edit?usp=sharing'); return false;"
                                        target="_blank"
                                        >
                                         StartSOLE 101 Presentation (1 hour version)
                                     </a>
                                     <a href="https://docs.google.com/presentation/d/1nby61PWTdZjsP9caLB5M8rLyT5NMTYzoI5V0fJHth3w/export/ppt"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1nby61PWTdZjsP9caLB5M8rLyT5NMTYzoI5V0fJHth3w/export/ppt'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
@@ -286,6 +296,7 @@
                                         <img src="/images/profile/ppt.svg" alt="">
                                     </a>
                                     <a href="https://docs.google.com/presentation/d/1nby61PWTdZjsP9caLB5M8rLyT5NMTYzoI5V0fJHth3w/export/pdf"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1nby61PWTdZjsP9caLB5M8rLyT5NMTYzoI5V0fJHth3w/export/pdf'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
@@ -293,6 +304,7 @@
                                         <img src="/images/profile/pdf.svg" alt="">
                                     </a>
                                     <a href="https://docs.google.com/presentation/d/1nby61PWTdZjsP9caLB5M8rLyT5NMTYzoI5V0fJHth3w/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1nby61PWTdZjsP9caLB5M8rLyT5NMTYzoI5V0fJHth3w/edit?usp=sharing'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
                                        target="_blank"
                                        data-position="bottom"
