added title tag to header, closes #128

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,5 @@
 <head>
+    <title>StartSOLE</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{config.googleAnalyticsUA}}"></script>
     <script>
