adding using the SOLE website to the trainer page

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -313,6 +313,40 @@
                                     </a>
                                 </div>
                             </li>
+                            <li class="collection-item">
+                                <div class="left-align">
+                                    <a href="https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/edit?usp=sharing'); return false;"
+                                       target="_blank"
+                                       >
+                                        Using the SOLE website
+                                    </a>
+                                    <a href="https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/export/ppt"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/export/ppt'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="PowerPoint">
+                                        <img src="/images/profile/ppt.svg" alt="">
+                                    </a>
+                                    <a href="https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/export/pdf"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/export/pdf'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="PDF">
+                                        <img src="/images/profile/pdf.svg" alt="">
+                                    </a>
+                                    <a href="https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/edit?usp=sharing'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="Google Doc">
+                                        <img src="/images/profile/gdoc.svg" alt="">
+                                    </a>
+                                </div>
+                            </li>
 
                         </ul>
                         <p>Please remember to share any copied content with <strong>support@startsole.org</strong> so we can learn from your experience.</p>
