added fallback for Safari (animated logo)

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -6,7 +6,7 @@
             <div class="row center-align">
                 <video width="165" height="165" autoplay muted>
                     <source src="/images/logos/animated-logo-small.webm" type="video/webm">
-                    <img src="/images/logos/logo.svg">
+                    <source src="/images/logos/animated-logo-small.mp4" type="video/mp4">
                 </video>
             </div>
 
