added YouTube tutorials on using the app to trainer profile page

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -347,6 +347,24 @@
                                     </a>
                                 </div>
                             </li>
+                            <li class="collection-item">
+                                <div class="left-align">
+                                    <a href="https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4"
+                                       onclick="trackOutboundLink('https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4'); return false;"
+                                       target="_blank"
+                                       >
+                                        Using the SOLE mobile app
+                                    </a>
+                                    <a href="https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4"
+                                       onclick="trackOutboundLink('https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="YouTube">
+                                        <img src="/images/profile/youtube.svg" alt="">
+                                    </a>
+                                </div>
+                            </li>
 
                         </ul>
                         <p>Please remember to share any copied content with <strong>support@startsole.org</strong> so we can learn from your experience.</p>
