added mobile app how to presentation to profile page for trainers

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -349,12 +349,37 @@
                             </li>
                             <li class="collection-item">
                                 <div class="left-align">
-                                    <a href="https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4"
-                                       onclick="trackOutboundLink('https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4'); return false;"
+                                    <a href="https://docs.google.com/presentation/d/1SgoE_5jEkiK7ev_eHiWYLNQPjmU4NdI5PwvJvyTzInA/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1SgoE_5jEkiK7ev_eHiWYLNQPjmU4NdI5PwvJvyTzInA/edit?usp=sharing'); return false;"
                                        target="_blank"
                                        >
                                         Using the SOLE mobile app
                                     </a>
+                                    <a href="https://docs.google.com/presentation/d/1SgoE_5jEkiK7ev_eHiWYLNQPjmU4NdI5PwvJvyTzInA/export/ppt"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1SgoE_5jEkiK7ev_eHiWYLNQPjmU4NdI5PwvJvyTzInA/export/ppt'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="PowerPoint">
+                                        <img src="/images/profile/ppt.svg" alt="">
+                                    </a>
+                                    <a href="https://docs.google.com/presentation/d/1SgoE_5jEkiK7ev_eHiWYLNQPjmU4NdI5PwvJvyTzInA/export/pdf"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1SgoE_5jEkiK7ev_eHiWYLNQPjmU4NdI5PwvJvyTzInA/export/pdf'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="PDF">
+                                        <img src="/images/profile/pdf.svg" alt="">
+                                    </a>
+                                    <a href="https://docs.google.com/presentation/d/1SgoE_5jEkiK7ev_eHiWYLNQPjmU4NdI5PwvJvyTzInA/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/presentation/d/1SgoE_5jEkiK7ev_eHiWYLNQPjmU4NdI5PwvJvyTzInA/edit?usp=sharing'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="Google Doc">
+                                        <img src="/images/profile/gdoc.svg" alt="">
+                                    </a>
+
                                     <a href="https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4"
                                        onclick="trackOutboundLink('https://www.youtube.com/watch?v=G7p6tli5P68&list=PLA0HS2MK5Lwj1IkOfNV-adui6it2qrbg4'); return false;"
                                        class="secondary-content filetype-icon-wrapper tooltipped"
